Api skeletons and adjustment
Scan api contract seperation
Service, business & data layer creation for repository & scan
