# internal/server/grpc.go
@@ -2,6 +2,8 @@ package server
 
 import (
 	v1 "backend-GuardRails/api/helloworld/v1"
+	repositoryV1 "backend-GuardRails/api/repository/v1"
+	scanV1 "backend-GuardRails/api/scan/v1"
 	"backend-GuardRails/internal/conf"
 	"backend-GuardRails/internal/service"
 
@@ -11,7 +13,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, repository *service.RepositoryService, scan *service.ScanService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -28,5 +30,7 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	}
 	srv := grpc.NewServer(opts...)
 	v1.RegisterGreeterServer(srv, greeter)
+	repositoryV1.RegisterRepositoryServer(srv, repository)
+	scanV1.RegisterScanServer(srv, scan)
 	return srv
 }
