# internal/server/http.go
@@ -2,6 +2,8 @@ package server
 
 import (
 	v1 "backend-GuardRails/api/helloworld/v1"
+	repositoryV1 "backend-GuardRails/api/repository/v1"
+	scanV1 "backend-GuardRails/api/scan/v1"
 	"backend-GuardRails/internal/conf"
 	"backend-GuardRails/internal/service"
 
@@ -11,7 +13,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, repository *service.RepositoryService, scan *service.ScanService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -28,5 +30,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 	}
 	srv := http.NewServer(opts...)
 	v1.RegisterGreeterHTTPServer(srv, greeter)
+	repositoryV1.RegisterRepositoryHTTPServer(srv, repository)
+	scanV1.RegisterScanHTTPServer(srv, scan)
 	return srv
 }
